# kontrast

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml  org.kde.kontrast.appdata.xml  org.kde.kontrast.desktop  snapcraft.yaml
.reuse/: dep5
android/: AndroidManifest.xml
android/res/drawable/: ic_launcher_background.xml  splash.xml
android/res/drawable-v24/: ic_launcher_foreground.xml
doc/: CMakeLists.txt  index.docbook
po/ar/: kontrast.po
po/ast/: kontrast.po
po/ca/: kontrast.po
po/ca/docs/kontrast/: index.docbook
po/ca@valencia/: kontrast.po
po/cs/: kontrast.po
po/da/: kontrast.po
po/de/: kontrast.po
po/de/docs/kontrast/: index.docbook  main.png.license
po/el/: kontrast.po
po/en_GB/: kontrast.po
po/eo/: kontrast.po
po/es/: kontrast.po
po/es/docs/kontrast/: index.docbook
po/eu/: kontrast.po
po/fi/: kontrast.po
po/fr/: kontrast.po
po/ga/: kontrast.po
po/gl/: kontrast.po
po/he/: kontrast.po
po/hi/: kontrast.po
po/ia/: kontrast.po
po/it/: kontrast.po
po/it/docs/kontrast/: index.docbook
po/ja/: kontrast.po
po/ka/: kontrast.po
po/ko/: kontrast.po
po/lt/: kontrast.po
po/lv/: kontrast.po
po/nl/: kontrast.po
po/nl/docs/kontrast/: index.docbook
po/nn/: kontrast.po
po/pa/: kontrast.po
po/pl/: kontrast.po
po/pt/: kontrast.po
po/pt_BR/: kontrast.po
po/pt_BR/docs/kontrast/: index.docbook
po/ro/: kontrast.po
po/ru/: kontrast.po
po/sa/: kontrast.po
po/sk/: kontrast.po
po/sl/: kontrast.po
po/sl/docs/kontrast/: index.docbook
po/sv/: kontrast.po
po/sv/docs/kontrast/: index.docbook
po/tr/: kontrast.po
po/uk/: kontrast.po
po/uk/docs/kontrast/: index.docbook
po/zh_CN/: kontrast.po
po/zh_TW/: kontrast.po
src/: CMakeLists.txt  Messages.sh  clipboard.cpp  clipboard.h  kontrast.cpp  kontrast.h  main.cpp  resources.qrc  savedcolormodel.cpp  savedcolormodel.h
src/contents/migrations/2023-05-22-132750_init/: down.sql  up.sql
src/contents/ui/: AboutPage.qml  FavoritePage.qml  HelpPage.qml  MainPage.qml  main.qml
src/qml/: FavoritePage.qml  HelpPage.qml  Main.qml  MainPage.qml
